# t3.chat

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yaml  package-lock.json  package.json  turbo.json
backend/: .gitignore  Dockerfile  conftest.py  package.json  pyproject.toml  ruff.toml
backend/app_chats/: admin.py  apps.py  websockets.py
backend/app_chats/migrations/: 0001_initial.py  0002_historicalmessage_llm_message_llm_and_more.py  0003_auto_20250614_0534.py  0004_conversation_message_branches_and_more.py  0005_historicalsetting_setting.py  0006_historicalsetting_llms_available_and_more.py  0007_remove_historicalsetting_llms_selected_and_more.py  0008_historicalsetting_visual_theme_and_more.py  0009_alter_historicalsetting_llm_context_and_more.py  0010_conversationmember_llms_selected_and_more.py  0011_conversationmember_hidden_and_more.py  0012_remove_conversation_db_tags_and_more.py  0013_remove_conversation_message_branches_and_more.py
backend/app_chats/models/: __init__.py  conversation.py  conversations.py  members.py  message.py  messages.py  settings.py  tags.py  users.py
backend/app_chats/schemas/: __init__.py  auth.py  conversations.py  members.py  messages.py  models.py  settings.py  sync.py  tags.py
backend/app_chats/test_fixtures/: __init__.py  users.py
backend/app_chats/views/: sync.py  (+2 more)
backend/app_routes/: apps.py  websockets.py
backend/app_users/: admin.py  apps.py
backend/app_utils/: apps.py  models.py  requests.py  schemas.py
backend/chats/: apps.py  requests.py
backend/server/: asgi.py  env.py  settings.py  urls.py
(+206 files in other folders)
